syntax = "proto3";
import "com/coralogixapis/alerts/v3/commons.proto";

package com.coralogixapis.alerts.v3;

import "protoc-gen-openapiv2/options/annotations.proto";
message NotificationDestination {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Notification Destination"
      description: "Configuration for where alert notifications should be sent"
      required: ["destination"]
    }
  };
  string connector_id = 1;
  optional string preset_id = 2;
  NotifyOn notify_on = 3;
  NotificationRouting triggeredRoutingOverrides = 4;
  optional NotificationRouting resolvedRouteOverrides = 5;
}

message NotificationRouting {
  optional SourceOverrides config_overrides = 1;
}

message SourceOverrides {
  string output_schema_id = 1;
  repeated MessageConfigField message_config_fields = 2;
  repeated ConnectorConfigField connector_config_fields = 3;
}

message ConnectorConfigField {
  string field_name = 1;
  string template = 2;
}

message MessageConfigField {
  string field_name = 1;
  string template = 2;
}


message NotificationRouter {
  string id = 1;
  optional NotifyOn notify_on = 2;
}
