syntax = "proto3";

package com.coralogixapis.alerts.v3;

import "google/protobuf/wrappers.proto";

message AlertSchedulingInfo {
    repeated ActivitySchedule active_on = 1;
}

message ActivitySchedule {
  DayOfWeek day_of_week = 1;
  //TODO: How does this format look like?
  google.protobuf.StringValue start_time = 2;
  google.protobuf.StringValue end_time = 3;
}
enum DayOfWeek {
  DAY_OF_WEEK_MONDAY_OR_UNSPECIFIED = 0;
  DAY_OF_WEEK_TUESDAY = 1;
  DAY_OF_WEEK_WEDNESDAY = 2;
  DAY_OF_WEEK_THURSDAY = 3;
  DAY_OF_WEEK_FRIDAY = 4;
  DAY_OF_WEEK_SATURDAY = 5;
  DAY_OF_WEEK_SUNDAY = 6;
}