syntax = "proto3";

package com.coralogixapis.notification_center.presets.v1;

import "com/coralogixapis/notification_center/common/common.proto";
import "com/coralogixapis/notification_center/common/v1/identifier.proto";
import "com/coralogixapis/notification_center/presets/v1/preset.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "com/coralogixapis/notification_center/presets/v1";

// Public API that allows retrieving available presets and managing custom presets.
service PresetsService {

  rpc CreateCustomPreset(CreateCustomPresetRequest) returns (CreateCustomPresetResponse) {
    option (google.api.http) = {
      post: "/v1/notification-center/presets/custom"
      body: "preset"
    };
  }

  rpc ReplaceCustomPreset(ReplaceCustomPresetRequest) returns (ReplaceCustomPresetResponse) {
    option (google.api.http) = {
      put: "/v1/notification-center/presets/custom"
      body: "preset"
    };
  }

  rpc DeleteCustomPreset(DeleteCustomPresetRequest) returns (DeleteCustomPresetResponse) {
    option (google.api.http) = {
      delete: "/v1/notification-center/presets/custom/{id}"
    };
  }

  rpc SetCustomPresetAsDefault(SetCustomPresetAsDefaultRequest) returns (SetCustomPresetAsDefaultResponse) {
    option (google.api.http) = {
      post: "/v1/notification-center/presets/custom/{id}:defaultSet"
    };
    option deprecated = true;
  }

  rpc SetPresetAsDefault(SetPresetAsDefaultRequest) returns (SetPresetAsDefaultResponse) {
    option (google.api.http) = {
      post: "/v1/notification-center/presets/{id}:defaultSet"
    };
  }

  rpc GetPreset(GetPresetRequest) returns (GetPresetResponse) {
    option (google.api.http) = {
      get: "/v1/notification-center/presets/{id}"
    };
  }

  rpc ListPresetSummaries(ListPresetSummariesRequest) returns (ListPresetSummariesResponse) {
    option (google.api.http) = {
      get: "/v1/notification-center/presets:summariesList"
    };
  }

  rpc BatchGetPresets(BatchGetPresetsRequest) returns (BatchGetPresetsResponse) {
    option (google.api.http) = {
      get: "/v1/notification-center/presets:batchGet"
    };
  }

  rpc GetDefaultPresetSummary(GetDefaultPresetSummaryRequest) returns (GetDefaultPresetSummaryResponse) {
    option (google.api.http) = {
      get: "/v1/notification-center/presets:defaultSummaryGet"
    };
  }

  rpc GetSystemDefaultPresetSummary(GetSystemDefaultPresetSummaryRequest) returns (GetSystemDefaultPresetSummaryResponse) {
    option (google.api.http) = {
      get: "/v1/notification-center/presets:systemDefaultSummaryGet"
    };
  }
}

message CreateCustomPresetRequest {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Create Custom Preset Request"
      description: "Request to create a new custom preset"
      required: []
    }
    external_docs: {
      url: "https://coralogix.com/docs/user-guides/notification-center/introduction/welcome/"
      description: "Find out more about notification center"
    }
  };
  Preset preset = 1;
}

message CreateCustomPresetResponse {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Create Custom Preset Response"
      description: "Response containing the created custom preset"
      required: []
    }
    external_docs: {
      url: "https://coralogix.com/docs/user-guides/notification-center/introduction/welcome/"
      description: "Find out more about notification center"
    }
  };
  Preset preset = 1;
}

message ReplaceCustomPresetRequest {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Replace Custom Preset Request"
      description: "Request to replace an existing custom preset"
      required: []
    }
    external_docs: {
      url: "https://coralogix.com/docs/user-guides/notification-center/introduction/welcome/"
      description: "Find out more about notification center"
    }
  };
  Preset preset = 1;
}

message ReplaceCustomPresetResponse {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Replace Custom Preset Response"
      description: "Response containing the updated custom preset"
      required: []
    }
    external_docs: {
      url: "https://coralogix.com/docs/user-guides/notification-center/introduction/welcome/"
      description: "Find out more about notification center"
    }
  };
  Preset preset = 1;
}

message DeleteCustomPresetRequest {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Delete Custom Preset Request"
      description: "Request to delete a custom preset"
      required: []
    }
    external_docs: {
      url: "https://coralogix.com/docs/user-guides/notification-center/introduction/welcome/"
      description: "Find out more about notification center"
    }
  };

  // removed deprecated_id
  reserved 1, 101, 102;

  presets.v1.PresetIdentifier deprecated_identifier_2 = 2 [deprecated = true];
  notification_center.PresetIdentifier identifier = 3 [deprecated = true];
  string id = 4;
}

message DeleteCustomPresetResponse {
}

message SetCustomPresetAsDefaultRequest {
  // removed deprecated_id
  reserved 1, 101, 102;

  presets.v1.PresetIdentifier deprecated_identifier_2 = 2 [deprecated = true];
  notification_center.PresetIdentifier identifier = 3 [deprecated = true];
  string id = 4;
}

message SetCustomPresetAsDefaultResponse {
}

message SetPresetAsDefaultRequest {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Set Preset As Default Request"
      description: "Request to set custom or system preset as default"
      required: []
    }
    external_docs: {
      url: "https://coralogix.com/docs/user-guides/notification-center/introduction/welcome/"
      description: "Find out more about notification center"
    }
  };

  presets.v1.PresetIdentifier deprecated_identifier = 1 [deprecated = true];
  notification_center.PresetIdentifier identifier = 2 [deprecated = true];
  string id = 3;
}

message SetPresetAsDefaultResponse {
}

message GetPresetRequest {
  // removed deprecated_id
  reserved 1, 101, 102;

  presets.v1.PresetIdentifier deprecated_identifier_2 = 2 [deprecated = true];
  notification_center.PresetIdentifier identifier = 3 [deprecated = true];
  string id = 4;
}

message GetPresetResponse {
  Preset preset = 1;
}

message ListPresetSummariesRequest {
  reserved 3;

  optional ConnectorType connector_type = 1;
  string deprecated_entity_type = 2 [deprecated = true];
  EntityType entity_type = 4 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { example: "\"ALERTS\"" }];
}

message ListPresetSummariesResponse {
  repeated PresetSummary preset_summaries = 1;
}

message BatchGetPresetsRequest {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Batch Get Presets Request"
      description: "Request to get multiple presets by their ids"
      required: []
    }
    external_docs: {
      url: "https://coralogix.com/docs/user-guides/notification-center/introduction/welcome/"
      description: "Find out more about notification center"
    }
  };
  repeated string deprecated_ids = 1 [deprecated = true];
  repeated notification_center.PresetIdentifier deprecated_identifiers = 2 [deprecated = true];
  repeated string ids = 3;

}

message BatchGetPresetsResponse {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Batch Get Presets Response"
      description: "Response containing the requested presets and any IDs not found"
      required: []
    }
    external_docs: {
      url: "https://coralogix.com/docs/user-guides/notification-center/introduction/welcome/"
      description: "Find out more about notification center"
    }
  };
  map<string, Preset> presets = 1;
  repeated string not_found_ids = 2;
}

message GetDefaultPresetSummaryRequest {
  ConnectorType connector_type = 1;
  string deprecated_entity_type = 2 [deprecated = true];
  EntityType entity_type = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { example: "\"ALERTS\"" }];
}

message GetDefaultPresetSummaryResponse {
  PresetSummary preset_summary = 1;
}

message GetSystemDefaultPresetSummaryRequest {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Get System Default Preset Summary Request"
      description: "Returns the preset summary for the system default preset (i.e., not a user-selected default)"
      required: []
    }
    external_docs: {
      url: "https://coralogix.com/docs/user-guides/notification-center/introduction/welcome/"
      description: "Find out more about notification center"
    }
  };
  ConnectorType connector_type = 1;
  string deprecated_entity_type = 2 [deprecated = true];
  EntityType entity_type = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { example: "\"ALERTS\"" }];
}

message GetSystemDefaultPresetSummaryResponse {
  PresetSummary preset_summary = 1;
}
